...
    "ADD PLAYER" : MessageLookupByLibrary.simpleMessage("ADD PLAYER"),
    "ADD RESULT" : MessageLookupByLibrary.simpleMessage("ADD RESULT"),
    "ADD SEASON" : MessageLookupByLibrary.simpleMessage("ADD SEASON"),
    "ADD TEAM" : MessageLookupByLibrary.simpleMessage("ADD TEAM"),
    "ADD TRAINING" : MessageLookupByLibrary.simpleMessage("ADD TRAINING"),
    "ADD WITH VIDEO" : MessageLookupByLibrary.simpleMessage("ADD WITH VIDEO"),
    "ALL TEAMS" : MessageLookupByLibrary.simpleMessage("ALL TEAMS"),
    "ASST" : MessageLookupByLibrary.simpleMessage("ASST"),
    "About" : MessageLookupByLibrary.simpleMessage("About"),
    "Add Admin" : MessageLookupByLibrary.simpleMessage("Add Admin"),
    "Add Coach" : MessageLookupByLibrary.simpleMessage("Add Coach"),
    "Add Division" : MessageLookupByLibrary.simpleMessage("Add Division"),
    "Add Game" : MessageLookupByLibrary.simpleMessage("Add Game"),
...
    "Assists" : MessageLookupByLibrary.simpleMessage("Assists"),
    "Attendance" : MessageLookupByLibrary.simpleMessage("Attendance"),
    "Attendance is from team" : MessageLookupByLibrary.simpleMessage("Attendance is from team"),
    "Availability" : MessageLookupByLibrary.simpleMessage("Availability"),
    "Away team won" : MessageLookupByLibrary.simpleMessage("Away team won"),
    "BLK" : MessageLookupByLibrary.simpleMessage("BLK"),
    "Basketball" : MessageLookupByLibrary.simpleMessage("Basketball"),
    "Blk" : MessageLookupByLibrary.simpleMessage("Blk"),
    "Block" : MessageLookupByLibrary.simpleMessage("Block"),
    "Blocks" : MessageLookupByLibrary.simpleMessage("Blocks"),
    "Break" : MessageLookupByLibrary.simpleMessage("Break"),
    "CAMERA" : MessageLookupByLibrary.simpleMessage("CAMERA"),
    "CHANGE ROLE" : MessageLookupByLibrary.simpleMessage("CHANGE ROLE"),
...
    "Contact phone number" : MessageLookupByLibrary.simpleMessage("Contact phone number"),
    "Copy details from" : MessageLookupByLibrary.simpleMessage("Copy details from"),
    "Create" : MessageLookupByLibrary.simpleMessage("Create"),
    "Create new" : MessageLookupByLibrary.simpleMessage("Create new"),
    "Created an account, please look in your email for the verification code.." : MessageLookupByLibrary.simpleMessage("Created an account, please look in your email for the verification code.."),
    "Current" : MessageLookupByLibrary.simpleMessage("Current"),
    "Current team season" : MessageLookupByLibrary.simpleMessage("Current team season"),
    "D/RB" : MessageLookupByLibrary.simpleMessage("D/RB"),
    "DEF RB" : MessageLookupByLibrary.simpleMessage("DEF RB"),
    "DELETE" : MessageLookupByLibrary.simpleMessage("DELETE"),
    "DELETE INVITE" : MessageLookupByLibrary.simpleMessage("DELETE INVITE"),
    "DIRECTIONS" : MessageLookupByLibrary.simpleMessage("DIRECTIONS"),
    "DONE" : MessageLookupByLibrary.simpleMessage("DONE"),
...
    "Invited to team" : MessageLookupByLibrary.simpleMessage("Invited to team"),
    "Invites" : MessageLookupByLibrary.simpleMessage("Invites"),
    "JMP" : MessageLookupByLibrary.simpleMessage("JMP"),
    "JOIN LEAGUE" : MessageLookupByLibrary.simpleMessage("JOIN LEAGUE"),
    "Jersey Number" : MessageLookupByLibrary.simpleMessage("Jersey Number"),
    "Jump Ball" : MessageLookupByLibrary.simpleMessage("Jump Ball"),
    "LOGIN" : MessageLookupByLibrary.simpleMessage("LOGIN"),
    "LOGOUT" : MessageLookupByLibrary.simpleMessage("LOGOUT"),
    "League" : MessageLookupByLibrary.simpleMessage("League"),
    "League the team is playing in" : MessageLookupByLibrary.simpleMessage("League the team is playing in"),
    "League/Tournaments" : MessageLookupByLibrary.simpleMessage("League/Tournaments"),
    "Lies, damn lies and statistics" : MessageLookupByLibrary.simpleMessage("Lies, damn lies and statistics"),
    "Load more" : MessageLookupByLibrary.simpleMessage("Load more"),
...
    "Minutes to arrive before game" : MessageLookupByLibrary.simpleMessage("Minutes to arrive before game"),
    "Monthly" : MessageLookupByLibrary.simpleMessage("Monthly"),
    "Must not be empty" : MessageLookupByLibrary.simpleMessage("Must not be empty"),
    "N/A" : MessageLookupByLibrary.simpleMessage("N/A"),
    "NEW" : MessageLookupByLibrary.simpleMessage("NEW"),
    "NEW MESSAGE" : MessageLookupByLibrary.simpleMessage("NEW MESSAGE"),
    "Name" : MessageLookupByLibrary.simpleMessage("Name"),
    "Name can only contain alphanumerical characters." : MessageLookupByLibrary.simpleMessage("Name can only contain alphanumerical characters."),
    "Name of the coach" : MessageLookupByLibrary.simpleMessage("Name of the coach"),
    "Name of the opponent." : MessageLookupByLibrary.simpleMessage("Name of the opponent."),
    "Need to be an administrator" : MessageLookupByLibrary.simpleMessage("Need to be an administrator"),
    "Need to have a subject" : MessageLookupByLibrary.simpleMessage("Need to have a subject"),
    "Need to select a place" : MessageLookupByLibrary.simpleMessage("Need to select a place"),
...
    "Optional" : MessageLookupByLibrary.simpleMessage("Optional"),
    "Other sport" : MessageLookupByLibrary.simpleMessage("Other sport"),
    "Overtime" : MessageLookupByLibrary.simpleMessage("Overtime"),
    "Overtime 1" : MessageLookupByLibrary.simpleMessage("Overtime 1"),
    "Overtime Break" : MessageLookupByLibrary.simpleMessage("Overtime Break"),
    "PERIOD" : MessageLookupByLibrary.simpleMessage("PERIOD"),
    "PLAYER" : MessageLookupByLibrary.simpleMessage("PLAYER"),
    "PUBLIC" : MessageLookupByLibrary.simpleMessage("PUBLIC"),
    "Parent" : MessageLookupByLibrary.simpleMessage("Parent"),
    "Password" : MessageLookupByLibrary.simpleMessage("Password"),
    "Passwords must match" : MessageLookupByLibrary.simpleMessage("Passwords must match"),
    "Pct" : MessageLookupByLibrary.simpleMessage("Pct"),
    "Penalty" : MessageLookupByLibrary.simpleMessage("Penalty"),
    "Period" : MessageLookupByLibrary.simpleMessage("Period"),
    "Period 1" : MessageLookupByLibrary.simpleMessage("Period 1"),
    "Period 2" : MessageLookupByLibrary.simpleMessage("Period 2"),
...
    "What stands in the way, becomes the way." : MessageLookupByLibrary.simpleMessage("What stands in the way, becomes the way."),
    "Where" : MessageLookupByLibrary.simpleMessage("Where"),
    "Will be there" : MessageLookupByLibrary.simpleMessage("Will be there"),
    "Win" : MessageLookupByLibrary.simpleMessage("Win"),
    "You must expect great things of yourself before you can do them." : MessageLookupByLibrary.simpleMessage("You must expect great things of yourself before you can do them."),
    "You must have some players in a season to be able to create a game." : MessageLookupByLibrary.simpleMessage("You must have some players in a season to be able to create a game."),
    "Your email address" : MessageLookupByLibrary.simpleMessage("Your email address"),
    "Your name" : MessageLookupByLibrary.simpleMessage("Your name"),
    "Youtube" : MessageLookupByLibrary.simpleMessage("Youtube"),
    "Youtube URL/id" : MessageLookupByLibrary.simpleMessage("Youtube URL/id"),
    "arriveBefore" : m0,
    "away" : MessageLookupByLibrary.simpleMessage("away"),
    "cardResultDetailsFinal" : m1,
...
