...
    InputDecoration decoration = const InputDecoration(),
    ValueChanged<Sport> onFieldSubmitted,
    FormFieldSetter<Sport> onSaved,
    FormFieldValidator<Sport> validator,
  })  : assert(initialValue != null),
        super(
            key: key ?? Key('SPORT'),
            initialValue: initialValue,
            onSaved: onSaved,
            validator: validator,
            builder: (field) {
              var state = field as SportFormFieldState;

...
